@startuml
[*] --> fetch_jobs
state verify_job
state restart
state download
state verify_installation
state fetch_jobs
state monitor
state install
state select_job
    fetch_jobs --> monitor: no-jobs-pending
    fetch_jobs --> select_job: jobs-available
    monitor --> select_job: jobs-available
    select_job --> verify_job: job-selected
    select_job --> fetch_jobs: selected-job-interrupted
    verify_job --> download: job-verified
    verify_job --> fetch_jobs: job-revoked
    verify_job --> verify_installation: job-installation-done
    verify_installation --> fetch_jobs: job-installation-complete
    download --> fetch_jobs: download-interrupted
    download --> install: download-completed
    install --> fetch_jobs: installation-interrupted
    install --> restart: installation-done
    restart --> fetch_jobs: restart-interrupted
@enduml
